# mctp-pldm-scp-firmware

./: .gitmodules  CMakeLists.txt  Makefile.cmake  README.md  change_log.md  maintainers.md  readme.md  user_guide.md
arch/arm/aarch64/: Architecture.cmake  CMakeLists.txt
arch/arm/aarch64/include/: arch_helpers.h  arch_reg.h
arch/arm/aarch64/src/: arch_crt0.S  arch_exceptions.S  arch_gic.c  arch_main.c
module/mctp/: CMakeLists.txt  Module.cmake
module/mctp/include/: libmctp-pcc.h  mod_mctp.h  poll.h
module/mctp/src/: Makefile  mod_mctp.c  pcc.c
module/mctp_fw/: CMakeLists.txt  Module.cmake
module/mctp_fw/include/: mod_mctp_fw.h
module/mctp_fw/include/internal/: mctp_fw_msg.h  mod_mctp_fw_int.h
module/mctp_fw/src/: Makefile  mctp_fw_msg.c  mod_mctp_fw.c
module/pldm/: CMakeLists.txt  Module.cmake
module/pldm/include/: mod_pldm.h  uchar.h
module/pldm/include/internal/: config.h  endian.h
module/pldm/include/internal/asm/: byteorder.h
module/pldm/src/: Makefile  mod_pldm.c
product/automotive-rd/rd1ae/module/io_block/: CMakeLists.txt
product/automotive-rd/rd1ae/module/io_block/src/: mod_io_block.c
product/fvp-baser-aemv8r/fw/: CMakeLists.txt  Firmware.cmake  Toolchain-Clang.cmake  Toolchain-GNU.cmake  config_armv8r_mpu.c  config_gicx00.c  config_pl011.c  config_sp805.c  fmw_gic.h  fmw_memory.h  fvp_baser_aemv8r_mmap.h
product/neoverse-rd/rdv3/lcp_ramfw/: CMakeLists.txt  Firmware.cmake
product/neoverse-rd/rdv3/lcp_ramfw/include/: lcp_css_mmap.h  lcp_mhu3.h
product/neoverse-rd/rdv3/mcp_ramfw/: CMakeLists.txt  Firmware.cmake  config_atu.c  config_mcp_platform.c  config_mhu3.c  config_scmi.c  config_scmi_system_power.c  config_transport.c
product/neoverse-rd/rdv3/mcp_ramfw/include/: fmw_cmsis.h  mcp_cfgd_mhu3.h  mcp_cfgd_scmi.h  mcp_cfgd_timer.h  mcp_cfgd_transport.h  mcp_css_mmap.h
product/neoverse-rd/rdv3/module/mcp_platform/: CMakeLists.txt
product/neoverse-rd/rdv3/module/mcp_platform/include/: mod_mcp_platform.h
product/neoverse-rd/rdv3/module/mcp_platform/src/: mod_mcp_platform.c
product/neoverse-rd/rdv3/module/scp_platform/: CMakeLists.txt
product/neoverse-rd/rdv3/module/scp_platform/include/: mod_scp_platform.h
product/neoverse-rd/rdv3/module/scp_platform/src/: mod_scp_platform.c  platform_power_mgmt.c
product/neoverse-rd/rdv3/scp_ramfw/: CMakeLists.txt  Firmware.cmake  config_amu_smcf_drv.c  config_atu.c  config_atu_mmio.c  config_clock.c  config_cmn_cyprus.c  config_css_clock.c  config_debugger_cli.c  config_io_block.c  config_mhu3.c  config_pcie_setup.c  config_pik_clock.c  config_ras_handler.c  config_scmi.c  config_scmi_system_power.c  config_sds.c  config_sid.c  config_smcf.c  config_system_pik.c  config_transport.c
product/neoverse-rd/rdv3/scp_ramfw/include/: cmn_node_id.h  fmw_cmsis.h  io_macro_layout.h  platform_core.h  scp_cfgd_mhu3.h  scp_cfgd_scmi.h  scp_cfgd_sds.h  scp_cfgd_timer.h  scp_cfgd_transport.h  scp_clock.h  scp_css_mmap.h  scp_fw_mmap.h
product/neoverse-rd/rdv3r1/lcp_ramfw/: CMakeLists.txt  Firmware.cmake  Toolchain-ArmClang.cmake  Toolchain-Clang.cmake  Toolchain-GNU.cmake  config_armv8m_mpu.c  config_pl011.c
product/neoverse-rd/rdv3r1/lcp_ramfw/include/: fmw_cmsis.h  fmw_log.h  fmw_memory.h  lcp_css_mmap.h
product/neoverse-rd/rdv3r1/mcp_ramfw/: CMakeLists.txt  Firmware.cmake  config_armv7m_mpu.c  config_debugger_cli.c  config_gtimer.c  config_mctp.c  config_mctp_fw.c  config_mctp_pcc.c  config_mctp_serial.c  config_pl011.c  config_pldm.c  config_pldm_fw.c
product/neoverse-rd/rdv3r1/mcp_ramfw/include/: fmw_cmsis.h  mcp_cfgd_timer.h  mcp_css_mmap.h
product/neoverse-rd/rdv3r1/scp_ramfw/: CMakeLists.txt  Firmware.cmake  config_apcontext.c  config_armv7m_mpu.c  config_atu.c  config_atu_mmio.c  config_clock.c  config_cmn_cyprus.c  config_gtimer.c  config_io_block.c  config_mhu3.c  config_noc_s3.c  config_pcie_setup.c  config_pik_clock.c  config_pl011.c  config_power_domain.c  config_ppu_v1.c  config_scmi.c  config_scmi_system_power.c  config_scp_platform.c  config_sds.c  config_sid.c  config_system_pik.c  config_system_power.c  config_timer.c  config_transport.c
product/neoverse-rd/rdv3r1/scp_ramfw/include/: cmn_node_id.h  core_manager.h  fmw_cmsis.h  io_macro_layout.h  platform_core.h  scp_atw0_mmap.h  scp_atw1_mmap.h  scp_cfgd_mhu3.h  scp_cfgd_scmi.h  scp_cfgd_sds.h  scp_cfgd_timer.h  scp_clock.h  scp_css_mmap.h  scp_cu_ap_periph.h  scp_cu_lcp_periph.h  scp_fw_mmap.h  scp_pwrctrl.h  system_pik.h
product/totalcompute/tc3/scp_boot/: CMakeLists.txt  Firmware.cmake  Toolchain-Clang.cmake  config_atu.c  config_bootloader.c  config_clock.c  config_css_clock.c  config_gtimer.c  config_mhu3.c  config_pik_clock.c  config_pl011.c  config_ppu_v1.c  config_sds.c  config_system_pll.c  config_tc3_bl1.c  config_timer.c  config_transport.c  fmw_memory.h
product/totalcompute/tc3/scp_runtime/: CMakeLists.txt  Firmware.cmake  Toolchain-ArmClang.cmake  Toolchain-GNU.cmake  config_clock.c  config_css_clock.c  config_dvfs.c  config_fch_polled.c  config_gtimer.c  config_mock_ppu.c  config_mock_psu.c  config_mpmm.c  config_mpmm_v2.c  config_pik_clock.c  config_power_domain.c  config_ppu_v1.c  config_psu.c  config_reg_sensor.c  config_resource_perms.c  config_scmi.c  config_scmi_perf.c  config_sds.c  config_sensor.c  config_system_pll.c  config_system_power.c  config_tc3_power_model.c  config_thermal_mgmt.c  config_timer.c  config_traffic_cop.c  config_transport.c  fmw_memory.h  fmw_notification.h
product/totalcompute/tc4/scp_css/: Buildoptions.cmake  CMakeLists.txt  Firmware.cmake  config_armv8m_mpu.c  config_atu.c  config_ccsm.c  config_clock.c  config_css_clock.c  config_dvfs.c  config_fch_polled.c  config_gtimer.c  config_mhu3.c  config_mock_ppu.c  config_mock_psu.c  config_mpmm.c  config_pik_clock.c  config_power_domain.c  config_ppu_v1.c  config_psu.c  config_resource_perms.c  config_scmi.c  config_scmi_perf.c  config_sds.c  config_system_pll.c  config_system_power.c  config_tc4_bl1.c  config_tc4_power_model.c  config_thermal_mgmt.c  config_timer.c  config_traffic_cop.c  config_transport.c  fmw_memory.h
(+490 files in other folders)
